kubernetes/nginx-serviceIngressLoadBalacner/nginx-and-service.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-alpine
  namespace: devops
  labels:
    app: nginx-alpine
spec:
  containers:
    - name: nginx
      image: nginx:alpine
      ports:
        - name: http
          containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-alpine-svc
  namespace: devops
spec:
  type: ClusterIP
  selector:
    app: nginx-alpine
  ports:
    - name: http
      port: 80
      targetPort: 80
